--- a/index.html
+++ b/index.html
@@ -221,6 +221,8 @@
           </div>
          <div class="contactForm1">
           <h2>Send a Message</h2>
+            <!-- <form action="https://formspree.io/f/xrbkoqjz" method="POST">
+            <input type="hidden" name="_redirect" value="thankyou.html"> -->
             <form action="submit_contact.php" method="POST">
             <div class="formBox1">
               <div class="inputBox1 w50">
